// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Apps 1`] = `
.c0 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c8:hover,
.c8:focus {
  background: rgba(255,255,255,0.07);
}

.c8:active {
  background: rgba(255,255,255,0.13);
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c2 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c2 > thead > tr > th,
.c2 > tbody > tr > th,
.c2 > tfoot > tr > th,
.c2 > thead > tr > td,
.c2 > tbody > tr > td,
.c2 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c2 > thead > tr > th:first-child,
.c2 > tbody > tr > th:first-child,
.c2 > tfoot > tr > th:first-child,
.c2 > thead > tr > td:first-child,
.c2 > tbody > tr > td:first-child,
.c2 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c2 > thead > tr > th:last-child,
.c2 > tbody > tr > th:last-child,
.c2 > tfoot > tr > th:last-child,
.c2 > thead > tr > td:last-child,
.c2 > tbody > tr > td:last-child,
.c2 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c2 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2 > thead > tr > th svg {
  height: 12px;
}

.c2 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c2 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c2 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c7 {
  cursor: pointer;
}

.c7:hover {
  background-color: rgba(255,255,255,0.13);
}

.c3 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <table
      class="c2 c3"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Description
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                aws_account_id: A1234
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Databases 1`] = `
.c0 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c8:hover,
.c8:focus {
  background: rgba(255,255,255,0.07);
}

.c8:active {
  background: rgba(255,255,255,0.13);
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c2 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c2 > thead > tr > th,
.c2 > tbody > tr > th,
.c2 > tfoot > tr > th,
.c2 > thead > tr > td,
.c2 > tbody > tr > td,
.c2 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c2 > thead > tr > th:first-child,
.c2 > tbody > tr > th:first-child,
.c2 > tfoot > tr > th:first-child,
.c2 > thead > tr > td:first-child,
.c2 > tbody > tr > td:first-child,
.c2 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c2 > thead > tr > th:last-child,
.c2 > tbody > tr > th:last-child,
.c2 > tfoot > tr > th:last-child,
.c2 > thead > tr > td:last-child,
.c2 > tbody > tr > td:last-child,
.c2 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c2 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2 > thead > tr > th svg {
  height: 12px;
}

.c2 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c2 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c2 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c7 {
  cursor: pointer;
}

.c7:hover {
  background-color: rgba(255,255,255,0.13);
}

.c3 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <table
      class="c2 c3"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Description
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Type
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            aurora
          </td>
          <td>
            PostgreSQL 11.6: AWS Aurora 
          </td>
          <td>
            RDS PostgreSQL
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                cluster: root
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Desktops 1`] = `
.c0 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c8:hover,
.c8:focus {
  background: rgba(255,255,255,0.07);
}

.c8:active {
  background: rgba(255,255,255,0.13);
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c2 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c2 > thead > tr > th,
.c2 > tbody > tr > th,
.c2 > tfoot > tr > th,
.c2 > thead > tr > td,
.c2 > tbody > tr > td,
.c2 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c2 > thead > tr > th:first-child,
.c2 > tbody > tr > th:first-child,
.c2 > tfoot > tr > th:first-child,
.c2 > thead > tr > td:first-child,
.c2 > tbody > tr > td:first-child,
.c2 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c2 > thead > tr > th:last-child,
.c2 > tbody > tr > th:last-child,
.c2 > tfoot > tr > th:last-child,
.c2 > thead > tr > td:last-child,
.c2 > tbody > tr > td:last-child,
.c2 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c2 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2 > thead > tr > th svg {
  height: 12px;
}

.c2 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c2 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c2 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c7 {
  cursor: pointer;
}

.c7:hover {
  background-color: rgba(255,255,255,0.13);
}

.c3 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <table
      class="c2 c3"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            host.com
          </td>
          <td>
            bb8411a4-ba50-537c-89b3-226a00447bc6
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                foo: bar
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Kubes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c8:hover,
.c8:focus {
  background: rgba(255,255,255,0.07);
}

.c8:active {
  background: rgba(255,255,255,0.13);
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c2 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c2 > thead > tr > th,
.c2 > tbody > tr > th,
.c2 > tfoot > tr > th,
.c2 > thead > tr > td,
.c2 > tbody > tr > td,
.c2 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c2 > thead > tr > th:first-child,
.c2 > tbody > tr > th:first-child,
.c2 > tfoot > tr > th:first-child,
.c2 > thead > tr > td:first-child,
.c2 > tbody > tr > td:first-child,
.c2 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c2 > thead > tr > th:last-child,
.c2 > tbody > tr > th:last-child,
.c2 > tfoot > tr > th:last-child,
.c2 > thead > tr > td:last-child,
.c2 > tbody > tr > td:last-child,
.c2 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c2 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2 > thead > tr > th svg {
  height: 12px;
}

.c2 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c2 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c2 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c7 {
  cursor: pointer;
}

.c7:hover {
  background-color: rgba(255,255,255,0.13);
}

.c3 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <table
      class="c2 c3"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            tele.logicoma.dev-prod
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                env: prod
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Nodes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c8:hover,
.c8:focus {
  background: rgba(255,255,255,0.07);
}

.c8:active {
  background: rgba(255,255,255,0.13);
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c2 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c2 > thead > tr > th,
.c2 > tbody > tr > th,
.c2 > tfoot > tr > th,
.c2 > thead > tr > td,
.c2 > tbody > tr > td,
.c2 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c2 > thead > tr > th:first-child,
.c2 > tbody > tr > th:first-child,
.c2 > tfoot > tr > th:first-child,
.c2 > thead > tr > td:first-child,
.c2 > tbody > tr > td:first-child,
.c2 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c2 > thead > tr > th:last-child,
.c2 > tbody > tr > th:last-child,
.c2 > tfoot > tr > th:last-child,
.c2 > thead > tr > td:last-child,
.c2 > tbody > tr > td:last-child,
.c2 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c2 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2 > thead > tr > th svg {
  height: 12px;
}

.c2 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c2 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c2 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c7 {
  cursor: pointer;
}

.c7:hover {
  background-color: rgba(255,255,255,0.13);
}

.c3 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <table
      class="c2 c3"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Hostname
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                cluster: one
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`render Roles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c21:hover,
.c21:focus {
  background: rgba(255,255,255,0.07);
}

.c21:active {
  background: rgba(255,255,255,0.13);
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c15 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c15:disabled {
  color: rgba(255,255,255,0.36);
}

.c15:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c15:hover:enabled,
.c15:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c15:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c18:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c17 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c10 {
  display: flex;
  justify-content: flex-end;
}

.c12 {
  display: flex;
  align-items: center;
}

.c14 {
  display: flex;
}

.c19 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c19 > thead > tr > th,
.c19 > tbody > tr > th,
.c19 > tfoot > tr > th,
.c19 > thead > tr > td,
.c19 > tbody > tr > td,
.c19 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c19 > thead > tr > th:first-child,
.c19 > tbody > tr > th:first-child,
.c19 > tfoot > tr > th:first-child,
.c19 > thead > tr > td:first-child,
.c19 > tbody > tr > td:first-child,
.c19 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c19 > thead > tr > th:last-child,
.c19 > tbody > tr > th:last-child,
.c19 > tfoot > tr > th:last-child,
.c19 > thead > tr > td:last-child,
.c19 > tbody > tr > td:last-child,
.c19 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c19 > tbody > tr > td {
  vertical-align: middle;
}

.c19 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c19 > thead > tr > th svg {
  height: 12px;
}

.c19 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c19 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c19 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c3 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c2 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c16 svg {
  font-size: 20px;
}

.c16 svg:before {
  padding-left: 1px;
}

.c8 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c7 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c5 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c4 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c6 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c6:hover,
.c6:focus,
.c6:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c6::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c20 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <nav
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              class="c6"
              placeholder="SEARCH..."
              value=""
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              />
            </div>
          </div>
        </div>
        <div
          class="c9 c10"
          width="100%"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
              color="text.main"
              style="white-space: nowrap; text-transform: uppercase;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                2
              </strong>
               of
               
              <strong>
                2
              </strong>
            </div>
          </div>
          <div
            class="c0 c14"
          >
            <button
              class="c15 c16"
              disabled=""
              title="Previous page"
            >
              <span
                class="c17 icon icon-circlearrowleft"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="c18 c16"
              disabled=""
              title="Next page"
            >
              <span
                class="c17 icon icon-circlearrowright"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </nav>
      <table
        class="c19 c20"
      >
        <thead>
          <tr>
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Role Name
                <span
                  class="c17 icon icon-chevronup"
                  title="sort items asc"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              role1
            </td>
            <td
              align="right"
            >
              <button
                class="c21"
                kind="border"
                width="134px"
              >
                + Add to request
              </button>
            </td>
          </tr>
          <tr>
            <td>
              role2
            </td>
            <td
              align="right"
            >
              <button
                class="c21"
                kind="border"
                width="134px"
              >
                + Add to request
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`render UserGroups 1`] = `
.c0 {
  box-sizing: border-box;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 134px;
}

.c8:hover,
.c8:focus {
  background: rgba(255,255,255,0.07);
}

.c8:active {
  background: rgba(255,255,255,0.13);
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c6 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  display: flex;
  flex-wrap: wrap;
}

.c2 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c2 > thead > tr > th,
.c2 > tbody > tr > th,
.c2 > tfoot > tr > th,
.c2 > thead > tr > td,
.c2 > tbody > tr > td,
.c2 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c2 > thead > tr > th:first-child,
.c2 > tbody > tr > th:first-child,
.c2 > tfoot > tr > th:first-child,
.c2 > thead > tr > td:first-child,
.c2 > tbody > tr > td:first-child,
.c2 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c2 > thead > tr > th:last-child,
.c2 > tbody > tr > th:last-child,
.c2 > tfoot > tr > th:last-child,
.c2 > thead > tr > td:last-child,
.c2 > tbody > tr > td:last-child,
.c2 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c2 > tbody > tr > td {
  vertical-align: middle;
}

.c2 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c2 > thead > tr > th svg {
  height: 12px;
}

.c2 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c2 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c2 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c7 {
  cursor: pointer;
}

.c7:hover {
  background-color: rgba(255,255,255,0.13);
}

.c3 > tbody > tr > td {
  vertical-align: middle;
}

.c1.disabled {
  pointer-events: none;
  opacity: 0.5;
}

<div>
  <div
    class="c0 c1"
  >
    <table
      class="c2 c3"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Name
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Description
              <span
                class="c4 icon icon-chevronsvertical"
                title="sort items"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                  />
                  <path
                    d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            group id 1
          </td>
          <td>
            user group
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                env: prod
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
        <tr>
          <td>
            group id 2
          </td>
          <td>
            admin group
          </td>
          <td>
            <div
              class="c0 c5"
            >
              <div
                class="c6 c7"
                kind="secondary"
              >
                env: dev
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c8"
              kind="border"
              width="134px"
            >
              + Add to request
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
